--- a/amelinium-confluence/pom.xml
+++ b/amelinium-confluence/pom.xml
@@ -1,21 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        <modelVersion>4.0.0</modelVersion>
-        <parent>
-                <groupId>com.googlecode.amelinium</groupId>
-                <artifactId>amelinium-parent</artifactId>
-                <version>0.2-SNAPSHOT</version>
-        </parent>
-        <groupId>com.googlecode.amelinium</groupId>
-        <artifactId>amelinium-confluence</artifactId>
-        <version>0.2-SNAPSHOT</version>
-        <name>amelinium confluence module</name>
-        <packaging>jar</packaging>
-        <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.googlecode.amelinium</groupId>
+		<artifactId>amelinium-parent</artifactId>
+		<version>0.2-SNAPSHOT</version>
+	</parent>
+	<groupId>com.googlecode.amelinium</groupId>
+	<artifactId>amelinium-confluence</artifactId>
+	<version>0.2-SNAPSHOT</version>
+	<name>amelinium confluence module</name>
+	<packaging>war</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>com.googlecode.amelinium</groupId>
+			<artifactId>amelinium-core</artifactId>
+			<version>0.2-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>net.java</groupId>
 			<artifactId>textile-j</artifactId>
 			<version>2.2</version>
-		</dependency>        
+		</dependency>
 		<!-- confluence -->
 		<dependency>
 			<groupId>org.swift.common</groupId>
@@ -62,18 +68,46 @@
 			<artifactId>commons-lang</artifactId>
 			<version>1.0</version>
 		</dependency>
-                <dependency>
-                        <groupId>com.googlecode.amelinium</groupId>
-                        <artifactId>amelinium-core</artifactId>
-                        <version>0.2-SNAPSHOT</version>
-                </dependency>
-<!-- 
-                <dependency>
-                        <groupId>args4j</groupId>
-                        <artifactId>args4j</artifactId>
-                        <version>[2.0.0,)</version>
-                </dependency>
--->
-        </dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-validation_1.0_spec</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxrpc-api</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-discovery</groupId>
+			<artifactId>commons-discovery</artifactId>
+			<version>0.4</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>wsdl4j</groupId>
+			<artifactId>wsdl4j</artifactId>
+			<version>1.6.2</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<finalName>amelinium</finalName>
+	</build>
 </project>
 
