changed poms to remove confluence connection from amelinium-parent and web

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
                 <module>amelinium-core</module>
                 <module>amelinium-commandline</module>
                 <module>amelinium-web</module>
-		<module>amelinium-confluence</module>
+	<!--	<module>amelinium-confluence</module>-->
 		<module>amelinium-db</module>
 <!-- 		<module>amelinium-gae</module> -->
         </modules>
