--- a/amelinium-web/pom.xml
+++ b/amelinium-web/pom.xml
@@ -99,21 +99,21 @@
 		</dependency>
 		
 		<!-- confluence -->
-		<dependency>
-			<groupId>org.swift.common</groupId>
-			<artifactId>confluence-soap</artifactId>
-			<version>4.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.swift.confluence.cli</groupId>
-			<artifactId>confluence-cli</artifactId>
-			<version>2.6.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.swift.common</groupId>
-			<artifactId>cli-soap</artifactId>
-			<version>2.6.0</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.swift.common</groupId> -->
+<!-- 			<artifactId>confluence-soap</artifactId> -->
+<!-- 			<version>4.0.0</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.swift.confluence.cli</groupId> -->
+<!-- 			<artifactId>confluence-cli</artifactId> -->
+<!-- 			<version>2.6.0</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.swift.common</groupId> -->
+<!-- 			<artifactId>cli-soap</artifactId> -->
+<!-- 			<version>2.6.0</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.swift.common</groupId>
 			<artifactId>cli</artifactId>
