added cleaning script in python, fixed schema

--- a/amelinium-db/src/main/resources/com/tomtom/amelinium/db/db.properties
+++ b/amelinium-db/src/main/resources/com/tomtom/amelinium/db/db.properties
@@ -1,14 +1,4 @@
-jdbc.driver_=org.sqlite.JDBC
-jdbc.url_=jdbc:sqlite:../webapps/amelinium/WEB-INF/classes/db/amelinium.db
-jdbc.testurl=jdbc:sqlite:amelinium.db
-jdbc.debugurl=jdbc:sqlite:webapps/amelinium/WEB-INF/classes/db/amelinium.db
-
 jdbc.driver=org.postgresql.Driver
-
-jdbc.url=jdbc:postgresql://ec2-107-22-160-237.compute-1.amazonaws.com:5432/daua3rvftcmt0c
-jdbc.username=meytbuazhkjilt
-jdbc.password=xDpbMAzjsksdBCOb-fD7SYk2Zq
-
-jdbc.localurl=jdbc:postgresql://127.0.0.1:5432/amelinium
-jdbc.localusername=tomtom
-jdbc.localpassword=tomtom
+jdbc.url=jdbc:postgresql://ec2-54-243-190-152.compute-1.amazonaws.com:5432/d2909v5iacqmao
+jdbc.username=thisisusername
+jdbc.password=thisispassword
